@@ -1,6 +1,7 @@
 Release Note
 
 * 11/19/2014
+  * fixed AtlasDDM for analysis+rucio
   * skipping setOwner for rucio
   * limitting nRecords with event-splitting in insertFiles
   * using pid to lock in CF
